--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "muicss": "^0.9.20",
     "react": "^0.14.3",
+    "react-alert": "^2.1.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
