--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.4",
     "muicss": "^0.9.20",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.0.0",
